syntax = "proto3";

// import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

option go_package = ".;gohost";

package gohost;

message AliveRequest {
    string hostname = 1;
    bool alive = 2;
}

message AliveResponse {
    bool response = 1;
}

service GoHost {
    rpc IsAlive (AliveRequest) returns (AliveResponse){
        option (google.api.http) = {
            post: "/v1/alive"
            body: "*"
          };
    };
}